Fixing wrapping for logs

--- a/packages/cli/assets/browser-console/src/App.scss
+++ b/packages/cli/assets/browser-console/src/App.scss
@@ -39,7 +39,7 @@
 
     .StatusPanel {
       flex: 0 1 auto;
-      overflow: auto;
+      min-height: 0;
     }
   }
 }
