--- a/packages/cli/assets/browser-console/src/components/RuntimeLogsPanel.scss
+++ b/packages/cli/assets/browser-console/src/components/RuntimeLogsPanel.scss
@@ -55,6 +55,8 @@
     }
   }
 
-  & > pre:last-child {
+  & > pre {
+    white-space: pre-wrap;
+    word-wrap: break-word;
   }
 }
